releases/v0.6.0/source/README.md
# MarkFlow

<p align="center">
  <img src="public/markflow.svg" alt="MarkFlow" width="72" />
</p>

<p align="center">
  <a href="LICENSE"><img alt="License: GPL-3.0" src="https://img.shields.io/badge/license-GPL--3.0-blue" /></a>
  <a href="https://github.com/enpiaohj/markflow/releases"><img alt="Release" src="https://img.shields.io/github/v/release/enpiaohj/markflow" /></a>
  <img alt="Platform" src="https://img.shields.io/badge/platform-Windows%2010%2F11%20x64-informational" />
</p>

面向项目与企业文档的**多格式本地文档库、专业写作、AI 协作和正式交付工作台**。

以普通本地文件夹为基础，统一管理 Markdown、Word、PDF、Excel、PPT、图片、代码、配置等格式，
提供跨格式全文搜索、专业编辑、AI 分析、批注审阅与正式交付能力。

**三条底线**：文件永远保存在原位置（不移动、不复制、不修改）；所有处理在本地完成（无需登录、不上传云端）；AI 不越权（上下文需确认、敏感信息先扫描、修改先审阅）。

---

## 功能特性

### 📁 多格式文档库

- **多个文档库**：左侧顶部的文档库选择器（下拉，按名称排序）切换库；也可在「设置 → 外观」改为并列多库（各库可折叠，折叠状态持久化）。库名是区分库的唯一标识，建库时必填且不可重名。「管理文档库」在侧边栏内完成打开 / 关闭 / 移除；移除后重新添加同一文件夹，历史版本与批注自动恢复。
- **文档标签页**：打开的文档保留为标题栏里的标签页，切换视图或返回文档库都不会丢，未保存的编辑与滚动位置也保留，只有手动关闭才结束。
- **默认定位**：打开文档库自动定位到第一项，左侧树与中央列表结构不同、一目了然。

- **建库向导**：三步完成——选择本地文件夹 → 索引设置（全文索引 / 图片 OCR / 便携元数据 / 排除规则）→ 确认创建；第一步即预览文件数量与总大小。
- **格式注册表**：Markdown、文本、代码、JSON、YAML、XML、配置、CSV、Word、Excel、PowerPoint、PDF、图片、压缩包、音视频等 17 类格式识别与图标区分；未知格式自动归入「其他」，不阻断使用。
- **目录树**：懒加载展开、右键菜单（新建 / 重命名 / 移动 / 删除）、面包屑导航、可排序文件列表、右侧详情面板。
- **扫描与索引**：默认排除（.git、node_modules、target 等）+ 自定义排除规则；隐藏项跳过；20 万条目上限保护；后台线程扫描，进度实时可见。
- **文件监听**：外部程序修改文件后自动防抖重扫（1.2 秒静默窗口），界面与搜索结果自动更新；文件被占用时跳过并计数，不中断。

### 🔍 全文检索

- 文件名 + 正文统一检索（Markdown、文本、代码、JSON、YAML、XML、配置、CSV；Office 正文已接入）。
- FTS5 trigram 分词，**支持中文子串匹配**；≥3 字符走全文索引，短词自动回退文件名匹配。
- 命中片段高亮（【】标注）、「文件名 / 正文」命中来源标记；点击结果跳转文档库定位并选中。
- 快捷键 `Ctrl + K` 或点击标题栏搜索框。

### ✍️ 原生编辑

- **Markdown 可视化模式**：Word 式分页画布（Tiptap / ProseMirror），标题、列表、任务列表、表格、引用、代码块、图片；Markdown 文件本身是唯一真源。
- **源码模式**（CodeMirror 6）：Markdown / JSON / YAML 语法高亮；两种模式随时互切。
- **保存闭环**：`Ctrl + S` 保存；临时文件 + fsync + 原子替换；保存前自动快照（每文件保留 20 个版本，可随时恢复）。
- **外部冲突检测**：文件被其他程序修改后保存会弹出三选一（覆盖保存 / 重新载入 / 取消）。
- 文本 / 代码 / JSON / YAML / XML / 配置 / CSV 均可直接编辑。

### 📄 PDF 与 Office

- **PDF 阅读**（PDF.js）：连续滚动、缩放（40%–400%）、可选中文本、跨页文本搜索（命中页码点击定位）。
- **Word / PowerPoint 内置渲染（默认）**：即时显示，Word 带按标题样式 / 大纲级别提取的导航窗格；无需安装 Office、也不会启动 Office。也可在文档工具栏或「设置 → 预览」切到「自动」，有 Microsoft Office / LibreOffice 时使用其导出的精确版式。
- **Excel 原生表格**：Excel 风格网格（字体 / 填充 / 边框 / 数字格式 / 合并 / 冻结窗格）与**按值筛选**，OOXML 纯解析（不执行宏、不改源文件）。
- **系统应用打开**：一键调用 Word / Excel / WPS 编辑原件，保存后由文件监听自动同步。
- **转换**：DOCX → Markdown 可编辑副本（Pandoc，转换前预检加密 / 宏 / 修订 / 批注）；DOCX / HTML 导入转 Markdown。
- 可选 LibreOffice 组件提供高保真版式预览（未安装时自动降级）。

### 🤖 AI 工作台

- **OpenAI 兼容 Provider**：DeepSeek、通义、OpenAI 等均可接入；**API Key 存 Windows 凭据库**，不落库、不回传前端。
- **连通性测试**：区分网络错误 / 认证失败 / 地址不存在 / 服务端问题。
- **上下文门禁**：发送前展示所选文件范围、字符数与 Token 估算、敏感信息扫描结果（9 类规则：API Key、JWT、私钥、连接串、手机号、身份证等，脱敏展示）；命中需知情放行。
- **流式引用问答**：回答以【来源 n】标注引用，一键保存为新文档。
- **AI 润色**：整篇润色后进入**行级差异审阅**，逐块确认后应用；应用走保存闭环自动快照。

### 🖼️ OCR 与批注

- **图片 OCR**（Windows OCR 系统能力）：一键识别图片文字，结果进入全文索引——截图里的文字也能搜到。
- **批注**：引用编辑器选中文本添加意见；支持解决 / 重开 / 删除；原文变化后引用无法定位时标注「位置已变」，不静默丢失。

### ✅ 质量检查与正式交付

- **质量检查**：标题层级跳跃、断链、空章节、敏感信息；分错误 / 警告 / 建议三级，错误可阻止交付。
- **正式交付中心**（五步）：来源选择 → 交付格式（Markdown / HTML / DOCX / PDF / ZIP）→ 目标目录与预检 → 开始交付 → 交付历史。
- **交付门禁**：预检服务端强制执行，错误项直接阻止交付。
- **来源冻结**：交付前对全部来源计算 SHA-256，交付清单记录冻结哈希与知情放行的预检提示。
- **可靠落盘**：临时目录生成 → 产物验证（存在 / 非空 / DOCX 有效性）→ 同卷原子改名；失败自动清理。

### ⚙️ 设置与外壳

- **设置页**：左侧分类（通用 / 外观 / 编辑器 / 预览 / AI / 组件 / 关于）+ 右侧内容，可搜索，改动立即生效。
- **主题**：浅色 / 深色 / 跟随系统；Word / Excel / PPT / PDF 的文档页面始终保持白纸底色。
- **开机启动**（当前用户 `Run` 项，无需管理员权限）与**关闭窗口时最小化到通知区域**。
- **打开任意文件**：菜单 / 拖放 / 文件关联打开任意文件（库外文件进入「单文件模式」）；`.md` 可设为默认打开方式。

### 🧰 后台任务中心

索引、重扫、转换、导入、交付任务统一管理：实时进度、取消、完成摘要、失败原因与重试入口；状态栏显示运行中任务数。

---

## 当前版本与路线图

**当前版本：v0.6.0**（详见 [CHANGELOG](CHANGELOG.md)）

| 里程碑 | 内容 | 状态 |
|---|---|---|
| v0.1 文档库基础 | 建库 / 浏览 / 索引 / 监听 | ✅ |
| v0.2 原生编辑与搜索 | 编辑闭环 / 全文检索 | ✅ |
| v0.3 PDF/Office 与转换 | 阅读器 / 快速预览 / Pandoc 转换 | ✅ |
| v0.4 AI 与审阅 | AI 工作台 / OCR / 批注 / 质量检查 | ✅（OCR 置信度随 SDK 缺失） |
| v0.5 正式交付 | 交付中心 / 门禁 / 历史 | ✅ |
| v0.6 体验迭代与开源 | 多文档库 / 文档标签页 / Office 阅读体验 / 设置与主题 / 转公开（GPL-3.0） | ✅ |

后续规划：扫描版 PDF 页面级 OCR、PDF 批注、Markdown 链接自动改写、代码签名与自动更新、文档关系图、团队协作。

## 系统要求

- **运行**：Windows 10/11 x64；WebView2 Runtime（Windows 11 内置）
- **可选增强**：Pandoc（转换 / 导入）、LibreOffice（高保真预览）、Windows OCR 语言包（图片识别）——均可在「设置 → 组件」查看状态
- **开发**：Node.js ≥ 20、Rust stable（MSVC）、VS Build Tools（C++ 工作负载）

## 安装

### 方式一：安装包（推荐）

从 [GitHub Releases](https://github.com/enpiaohj/markflow/releases) 下载 `MarkFlow-vX.Y.Z-win-x64.exe` 运行安装。
安装包未做代码签名，首次运行如触发 SmartScreen 提示，选择「更多信息 → 仍要运行」。

### 方式二：便携版

下载 `MarkFlow-vX.Y.Z-win-x64-portable.exe` 单文件直接运行，不写注册表。

### 方式三：从源码构建

见《[开发指南](docs/2026-09-22-MarkFlow开发指南-v1.2.md)》。

## 快速上手（5 分钟）

1. **建库**：启动后点击「创建文档库」→ 选择一个本地文件夹（例如项目文档目录）→ 保持默认索引设置 → 给文档库起一个名称（必填、不可重名）→ 创建。文件不会被移动或修改。
2. **浏览**：左侧顶部选择文档库，目录树双击展开；中央列表可按名称 / 修改时间 / 大小排序；右侧查看文件详情。双击打开的文档以标签页保留在标题栏。
3. **搜索**：`Ctrl + K` 输入关键词（如「负载均衡」），命中片段高亮，点击结果直接跳到所在位置。
4. **编辑**：双击 Markdown 文件进入可视化编辑，`Ctrl + S` 保存；用其他程序改动文件后 MarkFlow 会自动同步。
5. **AI（可选）**：设置 → AI 中添加 Provider 与 API Key → 编辑器右上「AI 助手」基于当前文档问答或润色。

更多细节见《[使用指南](docs/2026-09-22-MarkFlow使用指南-v1.2.md)》。

## 项目结构

```
MarkFlow/
├─ docs/                          # 使用指南、开发指南
├─ public/                        # 静态资源（应用图标）
├─ src/                           # React 前端
│  ├─ components/                 # 标题栏 / 活动栏 / 状态栏 / 向导 / 编辑器 /
│  │                              # 查看器 / AI 面板 / 批注面板 / 各 Context
│  ├─ views/                      # 开始 / 文档库 / 搜索 / 任务 / 历史 / 设置
│  ├─ components/office/          # Excel 网格 / Word・PPT 内置渲染 / 引擎切换
│  ├─ lib/                        # 后端 API 封装、类型、格式映射
│  ├─ navigation.ts               # 一级导航模型
│  └─ index.css                   # Tailwind 与设计令牌
├─ src-tauri/                     # Tauri 2（Rust 后端）
│  ├─ src/
│  │  ├─ format.rs                # 格式注册表（识别 + 显示名）
│  │  ├─ library.rs               # 文档库 / 扫描 / 索引 / 搜索 / 版本
│  │  ├─ editor.rs                # 读取 / 原子保存 / 冲突 / 快照恢复
│  │  ├─ ocr.rs                   # Windows OCR
│  │  ├─ office.rs                # DOCX/XLSX/PPTX OOXML 提取与预览
│  │  ├─ xlsxview.rs              # XLSX 原生表格（样式 / 数字格式 / 合并 / 冻结）
│  │  ├─ officepdf.rs / pptxslides.rs  # Office 版式预览（COM → PDF / 幻灯片图片）
│  │  ├─ openfile.rs / textenc.rs # 打开任意文件（单文件模式）/ 文本编码检测与写回
│  │  ├─ shell.rs                 # 通知区域图标 / 开机启动 / 关闭时最小化
│  │  ├─ convert.rs               # Pandoc 转换 / LibreOffice 转 PDF
│  │  ├─ component_manager.rs     # 可选组件探测与健康状态
│  │  ├─ delivery.rs              # 正式交付中心
│  │  ├─ tasks.rs                 # 后台任务管理器
│  │  ├─ watch.rs                 # 文件监听与防抖重扫
│  │  ├─ sensitive.rs             # 敏感信息扫描
│  │  ├─ checks.rs                # 文档质量检查
│  │  └─ ai.rs                    # AI Provider / 上下文门禁 / 流式对话
│  ├─ capabilities/               # Tauri 能力权限（最小授权）
│  └─ tauri.conf.json             # 应用与窗口配置
├─ scripts/                       # 工具脚本（第三方声明生成等）
├─ LICENSE / THIRD-PARTY-NOTICES.md / SECURITY.md
└─ index.html / vite.config.ts / package.json
```

## 架构概览

- **进程模型**：Tauri 2——Rust 后端承载全部文件与索引操作，前端只负责渲染与交互；两侧经 Tauri Command（JSON）与二进制 IPC（文件字节流）通信，事件（`scan:completed`、`library:changed`、`tasks:updated` 等）驱动界面刷新。
- **数据存储**：索引与元数据（库、文件、提取文本、FTS、历史版本、批注、任务、交付记录）存于用户应用数据目录的 `markflow.db`（SQLite，WAL）；**正文永远以文件系统为准**，数据库可随时删除重建。
- **Sidecar 安全**：Pandoc / LibreOffice / Edge 均以参数数组调用（无 Shell 拼接）、带超时、独立临时目录与 Profile、用后清理。
- **权限最小化**：文件读取命令校验目标已登记在文档库索引中；窗口控制按需授权。

## 开发

```powershell
npm install            # 安装前端依赖
npm run tauri dev      # 开发模式（热重载桌面窗口）
npm run build          # 前端类型检查 + 生产构建
npm run tauri build    # 完整发布构建（NSIS 安装包）
cargo test             # Rust 单元 / 集成测试（src-tauri 下）
```

测试策略、模块职责、发布流程与常见开发问题详见《[开发指南](docs/2026-09-22-MarkFlow开发指南-v1.2.md)》。

## 故障排查（FAQ）

| 现象 | 处理 |
|---|---|
| 安装时 SmartScreen 提示 | 安装包未签名所致，选「更多信息 → 仍要运行」 |
| 图片 OCR 提示未安装语言包 | Windows 设置 → 时间和语言 → 语言 → 添加中文（简体）语言 |
| 保存提示「文件已被外部程序修改」 | 文件在编辑期间被其他程序改过，按需选择覆盖 / 重新载入 |
| PDF/DOCX 转换按钮灰色 | 缺少对应组件，查看「设置 → 组件」并安装 Pandoc / LibreOffice |
| git 推送卡死或弹凭据窗口 | 见《开发指南》故障排查节（代理与凭据助手链） |
| 索引疑似不一致 | 触发任意文件变更由监听自动重扫，或重启应用重建（索引可随时重建，原文不受影响） |

## 文档

| 文档 | 说明 |
|---|---|
| 产品设计与技术实施方案 v2.0（不入库，存放于 ai-coding-workspace） | 产品定位、功能闭环、技术架构、路线图 |
| UI 概念设计图（不入库，存放于 ai-coding-workspace） | 10 张核心界面概念稿 |
| [使用指南 v1.2](docs/2026-09-22-MarkFlow使用指南-v1.2.md) | 分功能操作手册与常见问题 |
| [开发指南 v1.2](docs/2026-09-22-MarkFlow开发指南-v1.2.md) | 环境搭建、架构、测试、发布流程、许可与合规 |
| [THIRD-PARTY-NOTICES](THIRD-PARTY-NOTICES.md) | 第三方组件许可声明 |
| [SECURITY](SECURITY.md) | 安全策略与漏洞报告方式 |
| [CHANGELOG](CHANGELOG.md) | 版本变更记录 |
| [AGENTS.md](AGENTS.md) | 项目规则（Repository Rule） |

## 许可

MarkFlow 以 **[GPL-3.0-only](LICENSE)** 发布：可以自由使用、学习、修改与再分发；再分发（含修改版）须同样以 GPL-3.0 提供对应源码。

所使用的第三方组件及其许可见 [THIRD-PARTY-NOTICES.md](THIRD-PARTY-NOTICES.md)，均与 GPL-3.0 兼容。Pandoc / LibreOffice / Microsoft Edge 等外部工具不随应用分发，仅在本机已安装时以独立进程调用。

## 参与与反馈

- 问题与建议：[Issues](https://github.com/enpiaohj/markflow/issues)
- 安全漏洞：请按 [SECURITY.md](SECURITY.md) 私密报告，不要公开披露
- 贡献代码：Fork → 分支（`feature/<name>` / `fix/<name>`）→ Conventional Commits → 提交 Pull Request；提交内容将按 GPL-3.0 许可
